Fixed overlap of device warning
It covered the never been on campus option

--- a/style.css
+++ b/style.css
@@ -146,3 +146,7 @@ legend {
 canvas {
   margin-right: 500px;
 }
+
+form {
+  margin-bottom: 60px;
+}
